--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
 
-  nav {
+  > nav {
     margin-left: 5rem;
     height: 5rem;
 
@@ -50,5 +50,9 @@
         background-color: var(--yellow-500);
       }
     }
+  }
+
+  > button {
+    margin-left: auto;
   }
 }
